fix scrollbars

--- a/components/common/LitProtocolModal/shareModal/singleConditionSelect/SingleConditionSelect.css
+++ b/components/common/LitProtocolModal/shareModal/singleConditionSelect/SingleConditionSelect.css
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
-    margin-bottom: 4.5em;
 }
 
 .lsm-single-select-condition-display {
